@@ -4,6 +4,8 @@
    variables available for explicit use in your commands. See the documentation for more
    information: https://torsion.org/borgmatic/docs/how-to/run-arbitrary-borg-commands/
  * #719: Fix an error when running "borg key export" through borgmatic.
+ * When merging two configuration files, error gracefully if the two files do not adhere to the same
+   format.
 
 1.7.15
  * #326: Add configuration options and command-line flags for backing up a database from one
